poprawienie wcieć w js i dodanie kolorów w css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .card-placeholder {
+  background-color: purple;
+}
+.create-column {
+  background-color: red;
+}
+.card {
   background-color: green;
+  color: black;
 }
